# skit

./: .gitignore  LICENSE  README.md  setup.cfg
skit/scripts/: herby.py  skit.py  ssub.py
