[metadata]
name = skit
version = 0.0.7
description = A set of scripts that help with submitting jobs on slurm.

[options]
packages = find:
install_requires = 
    numpy

[options.entry_points]
console_scripts = 
    skit = skit.scripts.skit:main
    ssub = skit.scripts.ssub:main
    herby = skit.scripts.herby:main
